cmake_minimum_required(VERSION 2.8)

PROJECT(MeshSegmentation)

find_package(VTK REQUIRED)
include(${VTK_USE_FILE})

add_executable(MeshSegmentation MACOSX_BUNDLE MeshSegmentation)

if(VTK_LIBRARIES)
	target_link_libraries(MeshSegmentation ${VTK_LIBRARIES})
else()
	target_link_libraries(MeshSegmentation vtkHybrid vtkWidgets)
endif()